--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -56,7 +56,7 @@ weixin: /img/wx.jpg
 # 目录设定：0-不显示目录； 1-文章对应的md文件里有toc:true属性，才有目录； 2-所有文章均显示目录
 toc: 2
 # 根据自己的习惯来设置，如果你的目录标题习惯有标号，置为true即可隐藏hexo重复的序号；否则置为false
-toc_hide_index: true
+toc_hide_index: false
 # 目录为空时的提示
 toc_empty_wording: '目录，不存在的…'
 
@@ -133,6 +133,8 @@ music:
 #开启不算子访问统计
 busuanzi:
     enable: true
+    
+
 
 aboutme: 
          作者是一个极其低调，而又不失内涵的人。
